@@ -1,9 +1,12 @@
 package com.example.petbuddybackend.service.offer;
 
+import com.example.petbuddybackend.dto.availability.AvailabilityRangeDTO;
+import com.example.petbuddybackend.dto.availability.CreateOffersAvailabilityDTO;
 import com.example.petbuddybackend.dto.offer.OfferConfigurationDTO;
 import com.example.petbuddybackend.dto.offer.OfferDTO;
 import com.example.petbuddybackend.entity.amenity.AnimalAmenity;
 import com.example.petbuddybackend.entity.animal.AnimalAttribute;
+import com.example.petbuddybackend.entity.availability.Availability;
 import com.example.petbuddybackend.entity.offer.Offer;
 import com.example.petbuddybackend.entity.offer.OfferConfiguration;
 import com.example.petbuddybackend.entity.offer.OfferOption;
@@ -14,13 +17,16 @@ import com.example.petbuddybackend.service.animal.AnimalService;
 import com.example.petbuddybackend.service.mapper.OfferConfigurationMapper;
 import com.example.petbuddybackend.service.mapper.OfferMapper;
 import com.example.petbuddybackend.service.user.CaretakerService;
-import com.example.petbuddybackend.utils.exception.throweable.offer.AnimalAmenityDuplicatedInOfferException;
 import com.example.petbuddybackend.utils.exception.throweable.general.NotFoundException;
+import com.example.petbuddybackend.utils.exception.throweable.general.UnauthorizedException;
+import com.example.petbuddybackend.utils.exception.throweable.offer.AnimalAmenityDuplicatedInOfferException;
+import com.example.petbuddybackend.utils.exception.throweable.offer.AvailabilityDatesOverlappingException;
 import com.example.petbuddybackend.utils.exception.throweable.offer.OfferConfigurationDuplicatedException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.keycloak.common.util.CollectionUtil;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
 import java.text.MessageFormat;
@@ -40,10 +46,11 @@ public class OfferService {
     private final OfferMapper offerMapper = OfferMapper.INSTANCE;
     private final OfferConfigurationMapper offerConfigurationMapper = OfferConfigurationMapper.INSTANCE;
 
+    @Transactional
     public OfferDTO addOrEditOffer(OfferDTO offer, String caretakerEmail) {
         Caretaker caretaker = caretakerService.getCaretakerByEmail(caretakerEmail);
 
-        Offer modifiyngOffer = getOrCreateCaretakerOffer(caretakerEmail, offer.animal().animalType(),
+        Offer modifiyngOffer = getOrCreateOffer(caretakerEmail, offer.animal().animalType(),
                 caretaker, offer.description());
 
         if(StringUtils.hasText(offer.description())) {
@@ -57,62 +64,71 @@ public class OfferService {
 
     }
 
+    @Transactional
+    public OfferDTO deleteConfiguration(Long configurationId) {
+
+        OfferConfiguration offerConfiguration = getOfferConfiguration(configurationId);
+        Offer offer = offerConfiguration.getOffer();
+        offer.getOfferConfigurations().remove(offerConfiguration);
+        return offerMapper.mapToOfferDTO(offerRepository.save(offer));
+
+    }
+
+    @Transactional
+    public OfferConfigurationDTO editConfiguration(Long configurationId, OfferConfigurationDTO configuration) {
+
+        OfferConfiguration offerConfiguration = getOfferConfiguration(configurationId);
+
+        List<OfferConfiguration> restOfferConfigurations = offerConfiguration.getOffer().getOfferConfigurations().stream()
+                .filter(restOfferConfiguration -> !restOfferConfiguration.getId().equals(offerConfiguration.getId()))
+                .toList();
+
+        offerConfiguration.setDescription(configuration.description());
+        offerConfiguration.setDailyPrice(configuration.dailyPrice());
+        editConfigurationSelectedOptions(offerConfiguration, configuration);
+        checkForDuplicateConfiguration(restOfferConfigurations, offerConfiguration);
+        return offerConfigurationMapper.mapToOfferConfigurationDTO(offerConfigurationRepository.save(offerConfiguration));
+    }
+
+    @Transactional
+    public List<OfferDTO> setAvailabilityForOffers(CreateOffersAvailabilityDTO createOffersAvailability,
+                                                   String caretakerEmail) {
+
+        assertAvailabilityRangesNotOverlapping(createOffersAvailability.availabilityRanges());
+        List<Offer> modifiedOffers = createOffersAvailability.offerIds()
+                .stream()
+                .map(offerId -> setAvailabilityForOffer(offerId, createOffersAvailability.availabilityRanges(), caretakerEmail))
+                .toList();
+
+        return offerRepository.saveAll(modifiedOffers)
+                .stream()
+                .map(offerMapper::mapToOfferDTO)
+                .toList();
+    }
+
+    private Offer getOrCreateOffer(String caretakerEmail, String animalType, Caretaker caretaker,
+                                   String description) {
+        return offerRepository.findByCaretaker_EmailAndAnimal_AnimalType(caretakerEmail, animalType)
+                .orElse(Offer.builder()
+                        .caretaker(caretaker)
+                        .animal(animalService.getAnimal(animalType))
+                        .description(description)
+                        .build());
+
+    }
+
     private void setOfferConfigurations(OfferDTO offer, Offer modifiyngOffer) {
 
         if(CollectionUtil.isNotEmpty(offer.offerConfigurations())) {
-            List<OfferConfiguration> offerConfigurations = createConfigurationsForOffer(offer.offerConfigurations(), modifiyngOffer);
-            if(CollectionUtil.isNotEmpty(modifiyngOffer.getOfferConfigurations())) {
-                modifiyngOffer.getOfferConfigurations().addAll(offerConfigurations);
-            } else {
-                modifiyngOffer.setOfferConfigurations(offerConfigurations);
-            }
+            List<OfferConfiguration> offerConfigurations = createAdditionalConfigurationsForOffer(offer.offerConfigurations(), modifiyngOffer);
+
+            modifiyngOffer.getOfferConfigurations().addAll(offerConfigurations);
         }
 
     }
 
-    private void setOfferAnimalAmenities(OfferDTO offer, Offer modifiyngOffer) {
-
-        if(CollectionUtil.isNotEmpty(offer.animalAmenities())) {
-            Set<AnimalAmenity> animalAmenities = createAnimalAmenitiesForOffer(offer.animalAmenities(), modifiyngOffer);
-            if(CollectionUtil.isNotEmpty(modifiyngOffer.getAnimalAmenities())) {
-                modifiyngOffer.getAnimalAmenities().addAll(animalAmenities);
-            } else {
-                modifiyngOffer.setAnimalAmenities(animalAmenities);
-            }
-
-        }
-
-    }
-
-    private Set<AnimalAmenity> createAnimalAmenitiesForOffer(List<String> animalAmenities, Offer modifiyngOffer) {
-
-        List<AnimalAmenity> newAnimalAmenities = new ArrayList<>();
-        for(String animalAmenity : animalAmenities) {
-            AnimalAmenity newAnimalAmenity = animalService.getAnimalAmenity(animalAmenity, modifiyngOffer.getAnimal().getAnimalType());
-            checkDuplicateForAnimalAmenity(
-                    Stream.concat(
-                            Optional.ofNullable(modifiyngOffer.getAnimalAmenities()).orElse(Collections.emptySet()).stream(),
-                            newAnimalAmenities.stream()
-                    ).toList(), newAnimalAmenity
-            );
-            newAnimalAmenities.add(newAnimalAmenity);
-        }
-
-        return new HashSet<>(newAnimalAmenities);
-
-    }
-
-    private void checkDuplicateForAnimalAmenity(List<AnimalAmenity> oldAnimalAmenities, AnimalAmenity animalAmenity) {
-        if(oldAnimalAmenities.stream().anyMatch(oldAnimalAmenity -> oldAnimalAmenity.equals(animalAmenity))) {
-            throw new AnimalAmenityDuplicatedInOfferException(MessageFormat.format(
-                    "Animal amenity with name {0} already exists in offer",
-                    animalAmenity.getAmenity().getName()
-            ));
-        }
-    }
-
-    private List<OfferConfiguration> createConfigurationsForOffer(List<OfferConfigurationDTO> offerConfigurations,
-                                                                  Offer offer) {
+    private List<OfferConfiguration> createAdditionalConfigurationsForOffer(List<OfferConfigurationDTO> offerConfigurations,
+                                                                            Offer offer) {
         List<OfferConfiguration> newOfferConfigurations = new ArrayList<>();
         for(OfferConfigurationDTO offerConfiguration : offerConfigurations) {
             OfferConfiguration configuration = createConfiguration(offerConfiguration, offer);
@@ -131,12 +147,12 @@ public class OfferService {
 
         List<List<AnimalAttribute>> animalAttributesLists =
                 oldConfigurations.stream()
-                .map(OfferConfiguration::getOfferOptions)
-                .map(offerOptions -> offerOptions.stream()
-                        .map(OfferOption::getAnimalAttribute)
-                        .sorted(Comparator.comparingLong(AnimalAttribute::getId))
-                        .collect(Collectors.toList()))
-                .toList();
+                        .map(OfferConfiguration::getOfferOptions)
+                        .map(offerOptions -> offerOptions.stream()
+                                .map(OfferOption::getAnimalAttribute)
+                                .sorted(Comparator.comparingLong(AnimalAttribute::getId))
+                                .collect(Collectors.toList()))
+                        .toList();
 
         List<AnimalAttribute> newAnimalAttributes = configuration.getOfferOptions().stream()
                 .map(OfferOption::getAnimalAttribute)
@@ -145,11 +161,11 @@ public class OfferService {
 
         if(animalAttributesLists.stream().anyMatch(animalAttributes -> animalAttributes.equals(newAnimalAttributes))) {
             throw new OfferConfigurationDuplicatedException(MessageFormat.format(
-                            "Offer configuration with animal attributes {0} already exists",
-                            newAnimalAttributes.stream()
-                                    .map(AnimalAttribute::toString)
-                                    .collect(Collectors.joining(", "))
-                    ));
+                    "Offer configuration with animal attributes {0} already exists",
+                    newAnimalAttributes.stream()
+                            .map(AnimalAttribute::toString)
+                            .collect(Collectors.joining(", "))
+            ));
         }
 
     }
@@ -191,15 +207,41 @@ public class OfferService {
                 .build();
     }
 
-    private Offer getOrCreateCaretakerOffer(String caretakerEmail, String animalType, Caretaker caretaker,
-                                            String description) {
-        return offerRepository.findByCaretaker_EmailAndAnimal_AnimalType(caretakerEmail, animalType)
-                .orElse(Offer.builder()
-                        .caretaker(caretaker)
-                        .animal(animalService.getAnimal(animalType))
-                        .description(description)
-                        .build());
+    private void setOfferAnimalAmenities(OfferDTO offer, Offer modifiyngOffer) {
 
+        if(CollectionUtil.isNotEmpty(offer.animalAmenities())) {
+            Set<AnimalAmenity> animalAmenities = createAdditionalAnimalAmenitiesForOffer(offer.animalAmenities(), modifiyngOffer);
+
+            modifiyngOffer.getAnimalAmenities().addAll(animalAmenities);
+        }
+
+    }
+
+    private Set<AnimalAmenity> createAdditionalAnimalAmenitiesForOffer(List<String> animalAmenities, Offer modifiyngOffer) {
+
+        List<AnimalAmenity> newAnimalAmenities = new ArrayList<>();
+        for(String animalAmenity : animalAmenities) {
+            AnimalAmenity newAnimalAmenity = animalService.getAnimalAmenity(animalAmenity, modifiyngOffer.getAnimal().getAnimalType());
+            checkDuplicateForAnimalAmenity(
+                    Stream.concat(
+                            Optional.ofNullable(modifiyngOffer.getAnimalAmenities()).orElse(Collections.emptySet()).stream(),
+                            newAnimalAmenities.stream()
+                    ).toList(), newAnimalAmenity
+            );
+            newAnimalAmenities.add(newAnimalAmenity);
+        }
+
+        return new HashSet<>(newAnimalAmenities);
+
+    }
+
+    private void checkDuplicateForAnimalAmenity(List<AnimalAmenity> oldAnimalAmenities, AnimalAmenity animalAmenity) {
+        if(oldAnimalAmenities.stream().anyMatch(oldAnimalAmenity -> oldAnimalAmenity.equals(animalAmenity))) {
+            throw new AnimalAmenityDuplicatedInOfferException(MessageFormat.format(
+                    "Animal amenity with name {0} already exists in offer",
+                    animalAmenity.getAmenity().getName()
+            ));
+        }
     }
 
     private OfferConfiguration getOfferConfiguration(Long id) {
@@ -207,35 +249,13 @@ public class OfferService {
                 .orElseThrow(() -> new NotFoundException("Offer configuration with id " + id + " not found"));
     }
 
-    public OfferDTO deleteConfiguration(Long configurationId) {
-
-        OfferConfiguration offerConfiguration = getOfferConfiguration(configurationId);
-        Offer offer = offerConfiguration.getOffer();
-        offer.getOfferConfigurations().remove(offerConfiguration);
-        return offerMapper.mapToOfferDTO(offerRepository.save(offer));
-
-    }
-
-    public OfferConfigurationDTO editConfiguration(Long configurationId, OfferConfigurationDTO configuration) {
-
-        OfferConfiguration offerConfiguration = getOfferConfiguration(configurationId);
-
-        List<OfferConfiguration> restOfferConfigurations = offerConfiguration.getOffer().getOfferConfigurations().stream()
-                .filter(restOfferConfiguration -> !restOfferConfiguration.getId().equals(offerConfiguration.getId()))
-                .toList();
-
-        offerConfiguration.setDescription(configuration.description());
-        offerConfiguration.setDailyPrice(configuration.dailyPrice());
-        editConfigurationSelectedOptions(offerConfiguration, configuration);
-        checkForDuplicateConfiguration(restOfferConfigurations, offerConfiguration);
-        return offerConfigurationMapper.mapToOfferConfigurationDTO(offerConfigurationRepository.save(offerConfiguration));
-    }
-
     private void editConfigurationSelectedOptions(OfferConfiguration editingConfiguration, OfferConfigurationDTO configuration) {
         List<OfferOption> offerOptions = editingConfiguration.getOfferOptions();
 
-        offerOptions.removeIf(offerOption -> !configuration.selectedOptions().containsKey(offerOption.getAnimalAttribute().getAttributeName()) ||
-                !configuration.selectedOptions().get(offerOption.getAnimalAttribute().getAttributeName()).contains(offerOption.getAnimalAttribute().getAttributeValue()));
+        offerOptions.removeIf(offerOption ->
+                !configuration.selectedOptions().containsKey(offerOption.getAnimalAttribute().getAttributeName()) ||
+                !configuration.selectedOptions().get(offerOption.getAnimalAttribute().getAttributeName())
+                        .contains(offerOption.getAnimalAttribute().getAttributeValue()));
 
         for(Map.Entry<String, List<String>> entry : configuration.selectedOptions().entrySet()) {
             String attributeName = entry.getKey();
@@ -245,6 +265,71 @@ public class OfferService {
                 if(offerOptions.stream().noneMatch(offerOption -> offerOption.getAnimalAttribute().equals(animalAttribute))) {
                     offerOptions.add(createOfferOption(animalAttribute, editingConfiguration));
                 }
+            }
+        }
+    }
+
+    private Offer setAvailabilityForOffer(Long offerId, List<AvailabilityRangeDTO> availabilityRanges, String caretakerEmail) {
+
+        Offer offerToModify = getOffer(offerId);
+        assertOfferIsModifyingByOwnerCaretaker(offerToModify, caretakerEmail);
+        Set<Availability> availabilities = createAvailabilities(availabilityRanges, offerToModify);
+
+        replaceAvailabilitiesInOffer(offerToModify, availabilities);
+
+        return offerToModify;
+    }
+
+    private Offer getOffer(Long offerId) {
+        return offerRepository.findById(offerId)
+                .orElseThrow(() -> new NotFoundException("Offer with id " + offerId + " not found"));
+    }
+
+    private void replaceAvailabilitiesInOffer(Offer offerToModify, Set<Availability> availabilities) {
+        Set<Availability> availabilitiesFromOffer = offerToModify.getAvailabilities();
+        availabilitiesFromOffer.clear();
+        availabilitiesFromOffer.addAll(availabilities);
+    }
+
+    private void assertOfferIsModifyingByOwnerCaretaker(Offer offerToModify, String caretakerEmail) {
+        if(!offerToModify.getCaretaker().getEmail().equals(caretakerEmail)) {
+            throw new UnauthorizedException("Caretaker with email: " + caretakerEmail +
+                    "is trying to modify offer that does not belong to him");
+        }
+    }
+
+    private Set<Availability> createAvailabilities(List<AvailabilityRangeDTO> availabilityRanges, Offer offer) {
+        return availabilityRanges.stream()
+                .map(availabilityRange -> createAvailability(availabilityRange, offer))
+                .collect(Collectors.toSet());
+    }
+
+    private Availability createAvailability(AvailabilityRangeDTO availabilityRange, Offer offer) {
+
+        return Availability.builder()
+                .availableFrom(availabilityRange.availableFrom())
+                .availableTo(availabilityRange.availableTo())
+                .offer(offer)
+                .build();
+
+    }
+
+    private void assertAvailabilityRangesNotOverlapping(List<AvailabilityRangeDTO> availabilityRanges) {
+        List<AvailabilityRangeDTO> sortedRanges = new ArrayList<>(availabilityRanges);
+        sortedRanges.sort(Comparator.comparing(AvailabilityRangeDTO::availableFrom));
+
+        for(int i = 1; i < availabilityRanges.size(); i++) {
+            AvailabilityRangeDTO previous = availabilityRanges.get(i - 1);
+            AvailabilityRangeDTO current = availabilityRanges.get(i);
+
+            if (previous.overlaps(current)) {
+                throw new AvailabilityDatesOverlappingException(
+                        MessageFormat.format(
+                                "Availability range {0} overlaps with availability range {1}",
+                                previous.toString(),
+                                current.toString()
+                        )
+                );
             }
         }
     }
